Avoid having tooltips be cut off by tool container

--- a/src/style.less
+++ b/src/style.less
@@ -97,12 +97,18 @@
         }
       }
       .tooltip-container {
+        position: absolute;
         background: white;
         color: inherit;
         font-size: inherit;
         border-radius: 2px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 2px;
         padding: 5px 9px;
+
+        &-right {
+          right: 0;
+        }
+
         .tooltip-data {
             white-space: pre;
             display: flex;
